[tool.poetry]
name = "brev-banana-dev"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "brev_banana_dev"}]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.13.1"
huggingface-hub = "^0.12.0"
accelerate = "^0.16.0"
gradio = "^3.17.1"
diffusers = {version = "^0.12.1", extras = ["torch"]}


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
